xine-lib (next version) [someone fill in stability and urgency]

  * fix segfault on exit for w32codecs
  * fix yuy2 on xshm bug (affects w32codecs and msvc)
  * reimplemented x/y zoom
  * Wing Commander III MVE movie file demuxer
  * Creative Voice (VOC) file demuxer
  * Westwood Studios VQA file demuxer
  * AIFF file demuxer
  * Sun/NeXT SND/AU file demuxer
  * YUV4MPEG2 file demuxer
  * Id CIN video decoder
  * QT RLE video decoder
  * QT SMC video decoder
  * QT RPZA video decoder
  * Wing Commander III video decoder
  * Logarithmic PCM (mu-law & A-law) audio decoder
  * time-based seeking in ogg-streams
  * improved support for ogg-streams containing video (so-called ogm streams)
  * spu encoding for full overlay support with dxr3
  * icecast/shoutcast support
  * dvd raw device support
  * decode id3v1 tags in mp3 files 
  * updated internal liba52 to version 0.7.4
  * numeric selection of dvd menu buttons (could make some dvd easter eggs accesible)
	
xine-lib (0.9.13) unstable; urgency=low

  * improved audio resampling for cards limited to 16 bits, stereo or mono
  * native wmv7 decoder using ffmpeg
  * enable ffmpeg's native msmpeg4 v1/v2 decoder
  * correct highlight placement for anamorphic and pan&scan menus with DXR3
  * half-way support for widescreen tv sets with DXR3
  * WAV file demuxer
  * SMJPEG file demuxer
  * Id CIN file demuxer
  * FLI file demuxer
  * FLI video decoder
  * Raw RGB video support
  * Raw YUV video support
  * Microsoft RLE decoder
  * AAC decoder (FAAD2 library)
  * Reworked ALSA audio support 
  * demux_qt improvements to handle .mp4
  * initial support of Quicktime6 files
  * image redraw in paused mode (for window resize, adjusts etc)
  * skip by chapters GUI enhancement
  * deliver frame statistics only if frames have been skipped/dropped

 -- Siggi Langauf <siggi@debian.org>  Sat,  3 Aug 2002 22:44:16 +0200

xine-lib (0.9.12) unstable; urgency=low

  * demux_ts fixes for ATSC streams
  * configurable size of avi subtitles